--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
 
     <!-- Resume sectionn -->
 
-    <section class="section resume mx-5" id="resume">
+    <section class="section resume" id="resume">
         <div class="container text-center">
             <p class="section-subtitle">My Qualifications ?</p>
             <h6 class="section-title mb-5">Resume</h6>
