--- a/index.html
+++ b/index.html
@@ -782,8 +782,8 @@
                         <div class="col-md-4 " id = 'expand1'>
                             <div class="card">
                                 <p class="mb-3"> Aug 2022 - Present</p>
-                                <p class="mb-2"><strong>User Experience Lead</strong> </p>
-                                <p class="mb-2"><strong> Optum Global Solutions International B.V., Bengaluru</strong>
+                                <p class="mb-2"><strong>Freelance LEAD UX/UI DESIGNER,</strong> </p>
+                                <p class="mb-2"><strong>Sainu_uxdesign, Kerala</strong>
                                 </p>
                                 <div mb-2 p-class>
                                     <ul>
